--- a/index.html
+++ b/index.html
@@ -1,12 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
+    <meta charset="utf-8">
+    <meta http-equiv="Cache-Control" content="no-cache">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
+
+    <title>Harsh Banjare</title>
+    <meta name="description" content="Temporary Portfolio Site">
+
+    <script type="text/javascript" src="dat.gui.min.js"></script>
+    <link rel="stylesheet" href="style.css" class="rel">
+
 </head>
+
 <body>
-    <H1>Hello World</H1>
+    <canvas></canvas>
+    <div class="bg_cover">
+
+        <div class="container">
+            <div class="box">
+                <div class="image_container">
+                    <img src="./pfp.jpeg" alt="ME!" width="100" height="100">
+                </div>
+                <span class="name">HARSH BANJARE</span> <br>
+                <span class="tag_line">“I trick rocks into doing math”</span><br>
+                <span class="profession">Full Stack Developer • Web Architecht • Sysadmins</span><br>
+                <span class="paragraph">I am a self-taught full-stack developer based out of Raipur, India.
+                    Currently, I'm pursuing my bachelor's degree in Computer Science from LPU Jalandhar. I've been
+                    coding for over seven years and i posses various skills ragning from Linux System Administration to
+                    UI/UX Design.</span><br>
+                <div class="button_container">
+
+                    <button><span>Resume<img src="./download.svg" height="12" width="12"></span></button>
+                    <button><span>Github<img src="./github.svg" height="12" width="12"></span></button>
+                </div>
+                <div class="socials_container">
+
+                    <a href="https://www.linkedin.com/in/harshbanjare/" target="_blank"><img src="./linkedin.svg"
+                            height="22" width="22"></a>
+                    <a href="https://www.instagram.com/theharshbanjare/" target="_blank"><img src="./instagram.svg"
+                            height="22" width="22"></a>
+                    <a href="https://twitter.com/Mad_homosapien" target="_blank"><img src="./twitter.svg" height="22"
+                            width="22"></a>
+
+                    <a href="https://open.spotify.com/user/i8pibzpzitdzxzn8gm56blklr" target="_blank"><img
+                            src="./spotify.svg" height="22" width="22"></a>
+                    <a href="https://www.snapchat.com/add/theharshbanjare" target="_blank"><img src="./snapchat.svg"
+                            height="22" width="22"> </a>
+
+                </div>
+                <div class="footer">
+                    Handcrafted by Harsh • Full Portfolio Under Development
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <script src="./script.js"></script>
 </body>
+
 </html>
