--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="container">
             <div class="box">
                 <div class="image_container">
-                    <img src="./pfp.jpeg" alt="ME!" width="100" height="100">
+                    <img src="./assets/pfp.jpeg" alt="ME!" width="100" height="100">
                 </div>
                 <span class="name">HARSH BANJARE</span> <br>
                 <span class="tag_line">“I trick rocks into doing math”</span><br>
@@ -36,22 +36,22 @@
                     UI/UX Design.</span><br>
                 <div class="button_container">
 
-                    <button><span>Resume<img src="./download.svg" height="12" width="12"></span></button>
-                    <button><span>Github<img src="./github.svg" height="12" width="12"></span></button>
+                    <button><span>Resume<img src="./assets/download.svg" height="12" width="12"></span></button>
+                    <button><span>Github<img src="./assets/github.svg" height="12" width="12"></span></button>
                 </div>
                 <div class="socials_container">
 
-                    <a href="https://www.linkedin.com/in/harshbanjare/" target="_blank"><img src="./linkedin.svg"
+                    <a href="https://www.linkedin.com/in/harshbanjare/" target="_blank"><img src="./assets/linkedin.svg"
                             height="22" width="22"></a>
-                    <a href="https://www.instagram.com/theharshbanjare/" target="_blank"><img src="./instagram.svg"
+                    <a href="https://www.instagram.com/theharshbanjare/" target="_blank"><img
+                            src="./assets/instagram.svg" height="22" width="22"></a>
+                    <a href="https://twitter.com/Mad_homosapien" target="_blank"><img src="./assets/twitter.svg"
                             height="22" width="22"></a>
-                    <a href="https://twitter.com/Mad_homosapien" target="_blank"><img src="./twitter.svg" height="22"
-                            width="22"></a>
 
                     <a href="https://open.spotify.com/user/i8pibzpzitdzxzn8gm56blklr" target="_blank"><img
-                            src="./spotify.svg" height="22" width="22"></a>
-                    <a href="https://www.snapchat.com/add/theharshbanjare" target="_blank"><img src="./snapchat.svg"
-                            height="22" width="22"> </a>
+                            src="./assets/spotify.svg" height="22" width="22"></a>
+                    <a href="https://www.snapchat.com/add/theharshbanjare" target="_blank"><img
+                            src="./assets/snapchat.svg" height="22" width="22"> </a>
 
                 </div>
                 <div class="footer">
