--- a/assets/index.html
+++ b/assets/index.html
@@ -37,7 +37,8 @@
                 <div class="button_container">
 
                     <button><span>Resume<img src="./assets/download.svg" height="12" width="12"></span></button>
-                    <button><span>Github<img src="./assets/github.svg" height="12" width="12"></span></button>
+                    <a target="_blank" href="https://github.com/harshbanjare"><button><span>Github<img
+                                    src="./assets/github.svg" height="12" width="12"></span></button></a>
                 </div>
                 <div class="socials_container">
 
