--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
                 <span class="name">HARSH BANJARE</span> <br>
                 <span class="tag_line">“I trick rocks into doing math”</span><br>
-                <span class="profession">Full Stack Developer • Web Architect • Sysadmins</span><br>
+                <span class="profession">Full Stack Developer • Web Architect • Sysadmin</span><br>
                 <span class="paragraph">I am a self-taught full-stack developer based out of Raipur, India.
                     Currently, I'm pursuing my bachelor's degree in Computer Science from LPU Jalandhar. I've been
                     coding for over seven years and i possess various skills ragning from Linux System Administration to
