--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
-
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="/favicon/site.webmanifest">
     <title>Harsh Banjare</title>
     <meta name="description" content="Temporary Portfolio Site">
 
@@ -36,7 +39,8 @@
                     UI/UX Design.</span><br>
                 <div class="button_container">
 
-                    <button><span>Resume<img src="./assets/download.svg" height="12" width="12"></span></button>
+                    <a target="_blank" href="./assets/resume.pdf"><button><span>Resume<img src="./assets/download.svg"
+                                    height="12" width="12"></span></button></a>
                     <a target="_blank" href="https://github.com/harshbanjare"><button><span>Github<img
                                     src="./assets/github.svg" height="12" width="12"></span></button></a>
                 </div>
