--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <span class="profession">Full Stack Developer • Web Architect • Sysadmin</span><br>
                 <span class="paragraph">I am a self-taught full-stack developer based out of Raipur, India.
                     Currently, I'm pursuing my bachelor's degree in Computer Science from LPU Jalandhar. I've been
-                    coding for over seven years and i possess various skills ragning from Linux System Administration to
+                    coding for over seven years and i possess various skills ranging from Linux System Administration to
                     UI/UX Design.</span><br>
                 <div class="button_container">
 
