--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
                                     src="./assets/github.svg" height="12" width="12"></span></button></a>
                 </div>
                 <div class="socials_container">
+                    <a href="mailto:mail@harshbanjare.me" target="_blank"><img src="./assets/email-w.png" height="22"
+                            width="22"></a>
+                    <a href="https://t.me/tisfrank" target="_blank"><img src="./assets/telegram.svg" height="22"
+                            width="22"></a>
+                    <a href="https://discordapp.com/users/497437016431263748" target="_blank"><img
+                            src="./assets/discord.png" height="22" width="22"></a>
 
                     <a href="https://www.linkedin.com/in/harshbanjare/" target="_blank"><img src="./assets/linkedin.svg"
                             height="22" width="22"></a>
@@ -59,6 +65,18 @@
                             src="./assets/snapchat.svg" height="22" width="22"> </a>
 
                 </div>
+                <div class="tri-state-toggle">
+                    <div class="tri-button-container"><input id="web" type="radio" class="tri-button" name="web"
+                            value="WEB" checked> <label for="web">WEB</label>
+                    </div>
+                    <div class="tri-button-container"><input id="web3" type="radio" class="tri-button" name="web3"
+                            value="WEB3">
+                        <label for="web3">WEB3</label>
+                    </div>
+                    <div class="tri-button-container"><input id="tor" type="radio" class="tri-button" name="tor"
+                            value="TOR"> <label for="tor">TOR</label>
+                    </div>
+                </div>
                 <div class="footer">
                     Handcrafted by Harsh • Full Portfolio Under Development
                 </div>
@@ -69,6 +87,7 @@
 
 
     <script src="./script.js"></script>
+    <script src="./tristate.js"></script>
 </body>
 
 </html>
