--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
                 </div>
                 <div class="tri-state-toggle">
                     <div class="tri-button-container"><input id="web" type="radio" class="tri-button" name="web"
-                            value="WEB"> <label for="web">WEB</label>
+                            value="WEB" checked> <label for="web">WEB</label>
                     </div>
                     <div class="tri-button-container"><input id="web3" type="radio" class="tri-button" name="web3"
-                            value="WEB3" checked>
+                            value="WEB3">
                         <label for="web3">WEB3</label>
                     </div>
                     <div class="tri-button-container"><input id="tor" type="radio" class="tri-button" name="web"
