major update and responsiveness fixed

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XYFHXTDJTN"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XYFHXTDJTN"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-  gtag('config', 'G-XYFHXTDJTN');
-</script>
+        gtag('config', 'G-XYFHXTDJTN');
+    </script>
     <meta charset="utf-8">
     <meta http-equiv="Cache-Control" content="no-cache">
 
@@ -23,69 +23,95 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
     <link rel="manifest" href="/favicon/site.webmanifest">
     <title>Harsh Banjare</title>
-    <meta name="description" content="Temporary Portfolio Site">
-
-    <script type="text/javascript" src="dat.gui.min.js"></script>
+    <meta name="description" content="Harsh Banjare Portfolio Site">
     <link rel="stylesheet" href="style.css" class="rel">
 
 </head>
 
 <body>
-    <canvas></canvas>
-    <div class="bg_cover">
+    <div class="webgl"></div>
 
-        <div class="container">
-            <div class="box">
-                <div class="image_container">
-                    <img src="./assets/pfp.jpeg" alt="ME!" width="100" height="100">
-                </div>
-                <span class="name">HARSH BANJARE</span> <br>
-                <span class="tag_line">“I trick rocks into doing math”</span><br>
-                <span class="profession">Full Stack Developer • Web Architect • Sysadmin</span><br>
-                <span class="paragraph">I am a self-taught full-stack developer based out of Raipur, India.
-                    Currently, I'm pursuing my bachelor's degree in Computer Science from LPU Jalandhar. I've been
-                    coding for over seven years and i possess various skills ranging from Linux System Administration to
-                    UI/UX Design.</span><br>
-                <div class="button_container">
+    <div class="container">
+        <div class="box">
+            <div class="image_container">
+                <img src="./assets/pfp.jpeg" alt="ME!" width="100" height="100">
+            </div>
+            <span class="name">HARSH BANJARE</span> <br>
+            <span class="tag_line">“I trick rocks into doing math”</span><br>
+            <span class="profession">Full Stack Developer • Web Architect • Sysadmin</span><br>
+            <span class="paragraph">I am a self-taught full-stack developer based out of Raipur, India.
+                Currently, I'm pursuing my bachelor's degree in Computer Science from LPU Jalandhar. I've been
+                coding for over seven years and i possess various skills ranging from Linux System Administration to
+                UI/UX Design.</span><br>
+            <div class="button_container">
 
-                    <a target="_blank" href="./assets/resume.pdf"><button><span>Resume<img src="./assets/download.svg"
-                                    height="12" width="12"></span></button></a>
-                    <a target="_blank" href="https://github.com/harshbanjare"><button><span>Github<img
-                                    src="./assets/github.svg" height="12" width="12"></span></button></a>
-                </div>
-                <div class="socials_container">
-                    <a href="mailto:mail@harshbanjare.me" target="_blank"><img src="./assets/email-w.png" height="22"
-                            width="22"></a>
-                    <a href="https://t.me/tisfrank" target="_blank"><img src="./assets/telegram.svg" height="22"
-                            width="22"></a>
-                    <a href="https://discordapp.com/users/497437016431263748" target="_blank"><img
-                            src="./assets/discord.png" height="22" width="22"></a>
+                <a target="_blank" href="./assets/resume.pdf"><button><span>Resume<img src="./assets/download.svg"
+                                height="12" width="12"></span></button></a>
+                <a target="_blank" href="https://github.com/harshbanjare"><button><span>Github<img
+                                src="./assets/github.svg" height="12" width="12"></span></button></a>
+            </div>
+            <div class="socials_container">
+                <a href="mailto:mail@harshbanjare.me" target="_blank"><img src="./assets/email-w.png" height="22"
+                        width="22"></a>
+                <a href="https://t.me/tisfrank" target="_blank"><img src="./assets/telegram.svg" height="22"
+                        width="22"></a>
+                <a href="https://discordapp.com/users/497437016431263748" target="_blank"><img
+                        src="./assets/discord.png" height="22" width="22"></a>
 
-                    <a href="https://www.linkedin.com/in/harshbanjare/" target="_blank"><img src="./assets/linkedin.svg"
-                            height="22" width="22"></a>
-                    <a href="https://www.instagram.com/theharshbanjare/" target="_blank"><img
-                            src="./assets/instagram.svg" height="22" width="22"></a>
-                    <a href="https://twitter.com/Mad_homosapien" target="_blank"><img src="./assets/twitter.svg"
-                            height="22" width="22"></a>
+                <a href="https://www.linkedin.com/in/harshbanjare/" target="_blank"><img src="./assets/linkedin.svg"
+                        height="22" width="22"></a>
+                <a href="https://www.instagram.com/theharshbanjare/" target="_blank"><img src="./assets/instagram.svg"
+                        height="22" width="22"></a>
+                <a href="https://twitter.com/Mad_homosapien" target="_blank"><img src="./assets/twitter.svg" height="22"
+                        width="22"></a>
 
-                    <a href="https://open.spotify.com/user/i8pibzpzitdzxzn8gm56blklr" target="_blank"><img
-                            src="./assets/spotify.svg" height="22" width="22"></a>
-                    <a href="https://www.snapchat.com/add/theharshbanjare" target="_blank"><img
-                            src="./assets/snapchat.svg" height="22" width="22"> </a>
+                <a href="https://open.spotify.com/user/i8pibzpzitdzxzn8gm56blklr" target="_blank"><img
+                        src="./assets/spotify.svg" height="22" width="22"></a>
+                <a href="https://www.snapchat.com/add/theharshbanjare" target="_blank"><img src="./assets/snapchat.svg"
+                        height="22" width="22"> </a>
 
-                </div>
-               
-                <div class="footer">
-                    Handcrafted by Harsh • Full Portfolio Under Development
-                </div>
+            </div>
+
+            <div class="footer">
+                Handcrafted by Harsh • Full Portfolio Under Development
             </div>
         </div>
     </div>
 
+    <script src="lib/three.min.js"></script>
+    <script src="lib/stats.min.js"></script>
+    <script src="lib/SimplexNoise.js"></script>
+    <script src="lib/minivents.min.js"></script>
+    <script src="lib/TweenMax.min.js"></script>
+
+    <script src="lib/OrbitControls.js"></script>
+    <script src="lib/dat.gui.min.js"></script>
+    <script src="lib/atutil.js"></script>
+    <script src="lib/seedrandom.js"></script>
+
+    <script src="lib/three/postprocessing/EffectComposer.js"></script>
+    <script src="lib/three/postprocessing/RenderPass.js"></script>
+    <script src="lib/three/postprocessing/MaskPass.js"></script>
+    <script src="lib/three/postprocessing/ShaderPass.js"></script>
+
+    <script src="lib/three/shaders/FXAAShader.js"></script>
+    <script src="lib/three/shaders/CopyShader.js"></script>
+    <script src="lib/three/shaders/VignetteShader.js"></script>
+
+    <script src="js/SuperShader.js"></script>
+    <script src="js/TiltShiftShader.js"></script>
+    <script src="js/NoiseShader.js"></script>
+    <script src="js/SpaceShader.js"></script>
+    <script src="js/CustomRGBShiftShader.js"></script>
+    <script src='js/StarShader.js'></script>
+
+    <script src='js/Stars.js'></script>
+    <script src='js/Confetti.js'></script>
+    <script src='js/Ribbon.js'></script>
+    <script src="js/main.js"></script>
 
 
-    <script src="./script.js"></script>
-    <script src="./tristate.js"></script>
+
 </body>
 
 </html>
