broken link fix

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
                 <a href="https://www.linkedin.com/in/harshbanjare/" target="_blank"><img src="./assets/linkedin.svg"
                         height="22" width="22"></a>
-                <a href="https://www.instagram.com/theharshbanjare/" target="_blank"><img src="./assets/instagram.svg"
+                <a href="https://www.instagram.com/harsh._.banjare/" target="_blank"><img src="./assets/instagram.svg"
                         height="22" width="22"></a>
                 <a href="https://twitter.com/Mad_homosapien" target="_blank"><img src="./assets/twitter.svg" height="22"
                         width="22"></a>
