--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 UI/UX Design.</span><br>
             <div class="button_container">
 
-                <a target="_blank" href="./assets/RESUME.pdf"><button><span>Resume<img src="./assets/download.svg"
+                <a target="_blank" href="./assets/resume.pdf"><button><span>Resume<img src="./assets/download.svg"
                                 height="12" width="12"></span></button></a>
                 <a target="_blank" href="https://github.com/harshbanjare"><button><span>Github<img
                                 src="./assets/github.svg" height="12" width="12"></span></button></a>
